<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    >
    <!--tools:context=".LoginActivity">-->

    <!-- Login progress -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                style="?android:textAppearanceSmall"
                android:id="@+id/btnAddItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/closet_add"
                android:textStyle="bold"
                android:background="@drawable/button"
                />

            <View
                android:layout_width="match_parent"
                android:layout_marginTop="16dp"
                android:layout_height="3dp"
                android:background="@android:color/darker_gray"/>


            <Button
                android:id="@+id/ShowHideShoes"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/closet_shoes"
                android:textStyle="bold"
                android:background="@drawable/button"
                />

        <LinearLayout
            android:visibility="gone"
            android:id="@+id/showShoes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            </LinearLayout>

            <Button
                android:id="@+id/ShowHidePants"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/closet_pants"
                android:textStyle="bold"
                android:background="@drawable/button"
                />

            <LinearLayout
                android:visibility="gone"
                android:id="@+id/showPants"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            </LinearLayout>

            <Button
                android:id="@+id/ShowHideTShirts"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/closet_tshirt"
                android:textStyle="bold"
                android:background="@drawable/button"
                />

            <LinearLayout
                android:visibility="gone"
                android:id="@+id/showTShirts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            </LinearLayout>

            <Button
                android:id="@+id/ShowHideJackets"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/closet_jacket"
                android:textStyle="bold"
                android:background="@drawable/button"
                />

            <LinearLayout
                android:visibility="gone"
                android:id="@+id/showJackets"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            </LinearLayout>

            <Button
                android:id="@+id/ShowHideShirts"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/closet_shirt"
                android:textStyle="bold"
                android:background="@drawable/button"
                />

            <LinearLayout
                android:visibility="gone"
                android:id="@+id/showShirts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>