...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/closet_item_type_prompt"
                />

            <Spinner
                android:id="@+id/spinner1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:entries="@array/closet_item_type_array"
                android:prompt="@string/closet_item_type_prompt"
                android:spinnerMode="dialog"></Spinner>

...
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/closet_item_subType_prompt"
                    />

                <Spinner
                    android:id="@+id/spinnerSubType"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/closet_item_subType_array"
                    android:prompt="@string/closet_item_subType_prompt"
                    android:spinnerMode="dialog"></Spinner>

...
