<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:layout_margin="16dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:text="@string/user_name"
        android:textSize="24dp"/>

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:hint="@string/prompt_username"
            android:singleLine="true"
            android:text=""
            android:textSize="20dp"
            android:textStyle="bold" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:text="@string/email"
        android:textSize="24dp"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:singleLine="true"
        android:gravity="center_horizontal"
        android:hint="@string/prompt_email"
        android:text=""
        android:textSize="20dp"/>




    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:text="@string/password"
        android:textSize="24dp"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:singleLine="true"
        android:gravity="center_horizontal"
        android:text=""
        android:inputType="textPassword"
        android:textSize="20dp"
        />



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:text="@string/design_pref"
        android:textSize="24dp"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:background="@android:drawable/btn_dropdown"
        android:entries="@array/design_array"
        android:textAlignment="center"
        android:id="@+id/design_pref"
        android:spinnerMode="dropdown"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:text="@string/store_pref"
        android:textAlignment="center"
        android:textSize="24dp"/>
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@android:drawable/btn_dropdown"
        android:entries="@array/store_array"
        android:textAlignment="center"
        android:id="@+id/store_pref"
        android:spinnerMode="dropdown"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|bottom"
            android:paddingTop="@dimen/register_margin"
            android:id="@+id/registerBtn"
            android:text="@string/register"
            android:background="@drawable/button"
            />

    </LinearLayout>

</LinearLayout>